--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "[![Actions Status](https://github.com/ultra59/frontend-project-44/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/ultra59/frontend-project-44/actions)",
+  "description": "[![Actions Status](https://github.com/cruelwxrld/frontend-project-44/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/cruelwxrld/frontend-project-44/actions)",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "lint-fix": "eslint --fix ."
   },
-  "author": "fsnareu",
+  "author": "cruelwxrld",
   "license": "ISC",
   "type": "module",
   "bin": {
